--- a/ConsoleAppTester/ConsoleAppTester/ConsoleAppTester.csproj
+++ b/ConsoleAppTester/ConsoleAppTester/ConsoleAppTester.csproj
@@ -43,12 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Figure.cs" />
     <Compile Include="Man.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PersonAdditional.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Square.cs" />
+    <Compile Include="Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
